# dumpster

./: .gitignore  README.md  justfile  pyproject.toml
docker/: .gitignore  docker-compose.yml  entrypoint.sh
docker/db_mounts/init/: init.sql
docker/dumpster/: Dockerfile
docker/sqlite3/: Dockerfile  init-db.sql
src/branch_memory/: database.py  main.py
src/dumpster/: cli.py  database.py  db_conn.py  main.py  storage.py
src/dumpster/database/: connection.py  postgres.py
storage/tests/: test.sqlite3
tests/: conftest.py  test_database.py  test_main.py
tests/integration/: test_integration_mod.py
tests/unit/: test_database_postgres.py  test_unit_mod.py
tests/unit/database/: test_connection.py  test_postgres.py
