[project]
name = "dumpster"
version = "0.1.0"
description = "Stop going to the dump"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
]

[project.scripts]
dumpster = "dumpster:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
    "pytest",
    "pytest-mock",
    "pyright>=1.1.388",
    "docker>=7.1.0",
]
python-preference = "managed"

[tool.uv.pip]
python-version = "3.10"

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
executionEnvironments = [
    { root = "src"},
    { root = "tests"}
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C90", "B", "A", "C4"]
fixable = ["ALL"]
unfixable = ["C90", "B", "C4"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = ["storage_dir_state"]
